# MCRedis

./: .gitignore  .travis.yml  CMakeLists.txt  MCRedis.h  Makefile  README.md  appveyor.yml  appveyor_vs14.yml
MCRedis/: Command.h  Connection.h  ConnectionPool.h  MiddleWare.h  Reply.h  Runner.h
MCRedis/detail/: Helper.h  NullMutex.h
lib/hiredis/: async.c  build_vs12.bat  build_vs14.bat  build_vs17.bat  hiredis.c  hiredis.h  hiredis_vs12.lib  hiredis_vs14.lib  hiredis_vs17.lib  net.c  win32.h
src/: Connection.cpp  MiddleWare.cpp  Reply.cpp
test/: test.cpp
vs2013/: vs.sln
vs2013/MCRedis/: MCRedis.vcxproj  MCRedis.vcxproj.filters
vs2013/test/: test.vcxproj
vs2015/: vs.sln
vs2015/MCRedis/: MCRedis.vcxproj  MCRedis.vcxproj.filters
vs2015/test/: test.vcxproj
vs2017/MCRedis/: MCRedis.vcxproj  MCRedis.vcxproj.filters
vs2017/test/: test.vcxproj  test.vcxproj.filters
